# microtutor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: config.py  database.py  models.py  server.py
app/ai/: client.py  prompts.py  tutor.py
app/routes/: chat.py  exercises.py  lessons.py  progress.py  projects.py  quizzes.py  review.py  skills.py
app/services/: gamification.py  lesson_service.py  project_service.py  quiz_service.py  resources.py  review_service.py  skill_service.py
prompts/: cheat_sheet.md  curriculum.md  evaluate_exercise.md  evaluate_project.md  explain_differently.md  grade_answer.md  lesson.md  project_brief.md  quiz.md  resources.md  review_cards.md  tutor_chat.md
static/: index.html
static/css/: app.css
static/js/: api.js  app.js
tests/: test_chat_lesson.py
